testsuite/tests/effects/issue479.compilers.reference
Line 9, characters 5-11:
9 | open Effect
         ^^^^^^
Error: Unbound module Effect
- : unit = ()
type ('a, 'container) iterator = ('a -> unit) -> 'container -> unit
type 'a generator = unit -> 'a option
type ('a, 'container) iter2gen =
    ('a, 'container) iterator -> 'container -> 'a generator
Line 2, characters 7-8:
2 | type _ t += Hold: unit t
           ^
Error: Unbound type constructor t
Line 3, characters 12-20:
3 |   let gen = iter2gen List.iter in
                ^^^^^^^^
Error: Unbound value iter2gen
Line 2, characters 0-1:
2 | f ();;
    ^
Error: Unbound value f

